# Decoradores

./: 00_exemplo.py  00_sample.py  01_sample.py  dados.csv  dados.parquet  etl.py  logging_sample_errors.py  pipeline.py  pyproject.toml  utils.py
data/: day01.json  day02.json  day03.json
